# file-sorter

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  deno.json  dev.sh  index.html  package-lock.json  package.json
.github/workflows/: build-and-release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  report.rs
src-tauri/src/processor/: image_converter.rs  mod.rs  queue.rs  state_impl.rs  temp_manager.rs  zip_handler.rs
src-tauri/src/utils/: collision.rs  metadata.rs  mod.rs
src-tauri/tests/: collision_tests.rs  fail_fast_tests.rs  report_tests.rs  structure_tests.rs
src-tauri/tests/fixtures/: README.md
src/components/: ActionButtons.tsx  DropZone.tsx  ProgressBar.tsx  QueueItem.tsx  QueueList.tsx
src/styles/: main.css
src/types/: index.ts
