[package]
name = "file-sorter"
version = "1.0.0"
description = "Desktop app to convert images in zip files"
authors = ["Adrian Lansdown"]
edition = "2021"

[lib]
name = "file_sorter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
zip = "0.6"
image = { version = "0.25", features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] }
libheif-rs = { version = "2.1", features = ["image"] }
little_exif = "0.3"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
